# testSegments

./: README.md
import_prebuilt/: .cproject  .project
import_prebuilt/main/: CMakeLists.txt  stringdict.h
import_prebuilt/prebuilt/: CMakeLists.txt  sdkconfig
import_prebuilt/prebuilt/components/testclass/: CMakeLists.txt  TestClass.cpp  TestClass.h  stringdict.cpp
testSegments/: .cproject  .project
testSegments/components/testclass/: CMakeLists.txt
testSegments/main/: main.cpp
